fix overflow in concept detail

--- a/atramhasis/static/scss/atramhasis/_atramhasis-admin.scss
+++ b/atramhasis/static/scss/atramhasis/_atramhasis-admin.scss
@@ -35,6 +35,7 @@ html, body { width: 100%;  height: 100%;  margin: 0; overflow:hidden; }
 .claro .dijitTabContainerTop-tabs .dijitTab:hover:not(.dijitTabChecked) { background-color: #763e81 !important; color: $orange !important; }
 .claro .dijitTabContainerTop-tabs .dijitTab.dijitTabChecked { background: $orange none !important; }
 .claro .dijitTabContainer .tabStripButton { height: 100% !important; }
+.claro .dijitTabPaneWrapper .dijitTabContainerBottomChildWrapper { overflow-y: auto; height: 100%; }
 
 #appDiv footer {
   height: 30px;
@@ -115,26 +116,6 @@ a.admin-button:hover {
 /* Loading overlay */
 .pageOverlay { top: 0; left: 0; position: absolute; height: 100%; width: 100%; z-index: 1001; display: block; background-color: $steel; text-align: center; color: $light-gray;}
 .loadingMessage {font-size: 1em; margin: 30px; color: $light-gray;}
-
-///* buttons under header */
-//.action-bar {
-//  height: 30px;
-//  position: absolute;
-//  right: 35px;
-//  top: 70px;
-//  z-index: 3;
-//
-//  ul {
-//    margin: 0;
-//    padding: 0;
-//
-//    li {
-//      list-style-type: none;
-//      padding: 5px;
-//      float: left;
-//    }
-//  }
-//}
 
 // slide menu
 .slidemenu-container {
